# cpp_python_embedded

./: CMakeLists.txt  testfunc.py
3rd/python/include/python3.10/: pyconfig.h
include/: backend.h  frontend.h
source/: backend.cpp  frontend.cpp  main.cpp
